frontend/98-services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: catalogue
spec:
  clusterIP: None
---
kind: Endpoints
apiVersion: v1
metadata:
  name: catalogue
subsets:
- addresses:
  - ip: 34.154.92.13
  ports:
  - port: 443
---
kind: Service
apiVersion: v1
metadata:
  name: carts
spec:
  clusterIP: None
---
kind: Endpoints
apiVersion: v1
metadata:
  name: carts
subsets:
- addresses:
  - ip: 34.154.92.13
  ports:
  - port: 443
---
kind: Service
apiVersion: v1
metadata:
  name: orders
spec:
  clusterIP: None
---
kind: Endpoints
apiVersion: v1
metadata:
  name: orders
subsets:
- addresses:
  - ip: 34.154.92.13
  ports:
  - port: 443
---
kind: Service
apiVersion: v1
metadata:
  name: user
spec:
  clusterIP: None
---
kind: Endpoints
apiVersion: v1
metadata:
  name: user
subsets:
- addresses:
  - ip: 34.154.92.13
  ports:
  - port: 443
