frontend/99-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: front-end.test.dkp.lab.mark.eek
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: front-end
            port:
              number: 80
